# WebFormManager

./: .env.development  .env.example  .env.production  .env.staging  .eslintignore  .eslintrc.js  .gitignore  .replit  GITHUB_INTEGRATION.md  TESTING.md  backup-script.sh  backup.dump  check-jsx-errors.sh  config.ts  cookies.txt  db-update.sql  debug_status.sh  handbuch.docx  init-db.sh  jest.config.ts  migration_activity_logs.sql  migration_attachment_optimization.sql  migration_bauphase.sql  migration_construction_diary.sql  migration_construction_diary_employees.sql  migration_document_storage.sql  migration_gdpr_consent.sql  migration_incident_type.sql  migration_kalenderwoche.sql  migration_login_logs.sql  migration_milestone_ewb_soll.sql  migration_milestonedetails.sql  migration_milestones.sql  migration_permission_date.sql  migration_permissions.sql  migration_road_damages.sql  migration_sollmenge_varchar.sql  migration_subscription.sql  migration_user_registration_date.sql  migration_user_roles.sql  (+20 more)
attached_assets/: Bautagebuch Blanko (1).xlsx  Pasted--BodenAnalyseAPI-ts-Diese-Datei-enth-lt-die-API-Funktionen-f-r-die-Kommunikation-mit-dem-BGR-W-1747246347412.txt  Pasted--Bodenanalyse-Modul-f-r-bestehende-Replit-App-Bodenanalyse-Modul-zum-Einbinden-in-eine-best-1747245622129.txt  Pasted--Datenschutzerkl-rung-Nutzer-m-ssen-klar-und-verst-ndlich-dar-ber-informiert-werden-welche-persone-1745128547277.txt  Pasted--File-api-debug-attachments-js-const-express-require-express-const-multer-require-mult-1747171561305.txt  Übersicht.xlsx  (+12 more)
backups/: backup_20250428_061801.sql
(+385 files in other folders)
