[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "great-expectations>=1.4.2",
    "matplotlib>=3.10.0",
    "pandas>=2.1.4",
    "pandas-profiling>=3.6.6",
    "pillow>=11.2.1",
    "plotly>=6.0.1",
    "reportlab>=4.4.0",
    "sqlalchemy>=2.0.40",
    "ydata-profiling>=4.16.1",
]
